# MLOps_study

./: README.md  main.py  pyproject.toml  setup_kernel.sh
exercise_s1/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb
exercise_s1/final_exercise/: data.py  main.py  model.pt  model.py
exercise_s2/: .gitignore  CLI_EXERCISES_README.md  CLI_QUICKSTART.md  __init__.py  data.py  data_solution.py  evaluate.py  evaluate_solution.py  greetings.py  iris_classifier.py  model.py  model_solution.py  pyproject.toml  train.py  train_solution.py  typer_exercise.py  typer_exercise_solution.py  typer_exercise_solution2.py  typer_exercise_solution3.py  typing_exercise.py  typing_exercise_solution.py  visualize_solution.py
exercise_s2/data/: processed.dvc
exercise_s2/my_mnist_project/: README.md  pyproject.toml  tasks.py
exercise_s2/my_mnist_project/src/my_mnist_project/: evaluate.py  train.py
exercise_s2/my_mnist_project/tests/: test_data.py
