[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exercise_s2"
version = "0.0.1"
description = "MLOps Exercise S2"
authors = [
  { name = "Yanchao", email = "your@email.com" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.0",
    "click>=8.0",
    "numpy>=2.4.1",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
train = "train:main"
evaluate = "evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "mypy==1.19.1",
    "ruff==0.15.0",
]

[tool.ruff]
line-length = 99
